--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,5 @@
 html {
-	font-family: Helvetica, sans-serif;
-	text-align: center;
+
 }
 
 h1 {
@@ -22,23 +21,34 @@ p {
 	font-size: 14px;
 }
 
-.links {
-	font-size: 18px;
-	color: white;
+a {
+    color: black;
 }
 
-.image-headers {
-	background-image: url("../images/the-flatiron-building.png");
-	background-size: cover;
-	color:white;
+header {
+	display: flex;
+	font-family: Verdana;
+	font-size: 14px;
+	font-weight: bold;
 }
 
-.footer-box {
-	background-color: dimgray;
-   text-align: left;
+nav {
+	display: flex;
 }
 
-.footer-copyright {
-	font-size: 11px;
-	color: white;
+nav span {
+	display: inline-block;
+	padding: 20px 10px;
 }
+
+.logo {
+	display: flex;
+	align-items: center;
+	flex-grow: 1;
+	padding-left: 30px;
+}
+
+.logo span {
+	color: MediumAquamarine;
+}
+
